<resources>
    <string name="app_name">Agroic</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_start_icon">email</string>
    <string name="SignIn">Signin</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="Login">Login</string>
    <string name="popular_item">Popular Items</string>
    <string name="view_all">View All\n</string>
    <string name="Machines">Machines</string>
    <string name="seed">Seed</string>
    <string name="name">Name</string>
    <string name="cropSelction">Select Scrop</string>
    <string name="Save">Save</string>
</resources>