<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:padding="30dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/name"
           android:layout_marginTop="70dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/name_text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
       </com.google.android.material.textfield.TextInputLayout>


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/email"
           android:layout_marginTop="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/name">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/email_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/cropSelection"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/cropSelction"
           android:layout_marginTop="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/email">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/cropSelection_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:layout_marginTop="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/cropSelection">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/password_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>

       <Button
           style="@style/Widget.Material3.Button.ElevatedButton"
           android:padding="15dp"
           android:id="@+id/save"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/password"
           android:textColor="#FFFFFF"
           android:backgroundTint="#228B22"
           android:layout_marginTop="10dp"
           android:text="@string/Save" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>