<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            tools:context=".ui.HomeFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bannerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/banner_layout" />

            <LinearLayout
                android:id="@+id/PopularLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/bannerRecyclerView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:text="@string/popular_item"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/popular_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/secondaryColor"
                    android:textStyle="bold"
                    android:text="@string/view_all" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PopularLinearlayout"
                tools:listitem="@layout/item_layout" />

            <LinearLayout
                android:id="@+id/MachineLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/popularRecyclerView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:text="@string/Machines"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/machine_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/secondaryColor"
                    android:textStyle="bold"
                    android:text="@string/view_all" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/MachineRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/MachineLinearlayout"
                tools:listitem="@layout/item_layout" />




            <LinearLayout
                android:id="@+id/SeedLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/MachineRecyclerView">

                <TextView
                    android:id="@+id/seed_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:text="@string/seed"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/bannerRecyclerView" />

                <TextView
                    android:id="@+id/seed_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/secondaryColor"
                    android:textStyle="bold"
                    android:text="@string/view_all"
                    app:layout_constraintTop_toBottomOf="@id/bannerRecyclerView" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/seedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/SeedLinearlayout"
                tools:listitem="@layout/item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>